# codexa-cli

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  behave.ini  compare_versions.sh  compose.yaml  coverage.txt  justfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pre-commit.yaml  testing.yaml
codexa/: __init__.py  main.py
codexa/client/: __init__.py  accessor.py  versioning.py
codexa/commands/: __init__.py  compare.py  list.py  run.py
codexa/core/: constants.py  env.py  errors.py  handler.py  output.py
features/: cli_help.feature  compare_command.feature  environment.py  error_handling.feature  list_command.feature  run_command.feature
features/steps/: __init__.py  common_steps.py  error_handling_steps.py  test_types.py  testclerk_stubs.py  utils.py
reports/: TESTS-cli_help.xml  TESTS-compare_command.xml  TESTS-error_handling.xml  TESTS-list_command.xml  TESTS-run_command.xml
testclerk/: main.py
testclerk/client/: accessor.py  collector.py  executor.py  versioning.py
testclerk/commands/: compare.py  list.py  run.py
testclerk/core/: constants.py  env.py  errors.py  handler.py
tests/: conftest.py  test_accessor.py  test_basic.py  test_clients.py  test_commands.py  test_executor.py  test_utils.py  tools.py
tests/resources/: pytest_test.tpl
