[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "testclerk"
version = "0.0.1"
description = "Python-based CLI for test report analysis"
authors = ["Joaquin Franco <chino.franco@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "testclerk" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pytest = "^8.2.2"
colorama = "^0.4.6"
requests = "^2.32.3"
pyyaml = "^6.0.1"
jinja2 = "^3.1.4"
docker = "^7.1.0"
tqdm = "^4.66.4"
openai = "^1.97.0"
gitpython = "^3.1.44"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.4.2"
coverage = "^7.6.0"
poetry = "^1.8.3"
behave = "^1.2.7"
mypy = "^1.12.0"

[tool.poetry.scripts]
testclerk = "testclerk.main:cli"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "behave.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "features.*"
ignore_missing_imports = true
disable_error_code = ["no-redef", "unused-ignore"]
