[project]
name = "codexa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "docker>=7.1.0",
    "gitpython>=3.1.45",
    "jinja2>=3.1.6",
    "openai>=1.99.9",
    "pygithub>=2.7.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.10.3",
    "pre-commit>=4.3.0",
]

[project.scripts]
codexa = "codexa.main:cli"
